--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "nodemailer": "^8.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
+    "@types/nodemailer": "^7.0.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
